--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "24.0.1"
 
     defaultConfig {
-        applicationId "com.jev.wileyfoxboot"
+        applicationId "substratum.theme.template"
         minSdkVersion 23
         targetSdkVersion 24
         versionCode 1
